2026-06-27_docker_kubernetes_t-mobile/lab0/workspace/fluxcd/examples/capacitor_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - capacitor.k8s.sikademo.com
      secretName: capacitor.k8s.sikademo.com-tls
  rules:
    - host: capacitor.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: flux-system
spec:
  podSelector: {} # This selects all pods in the namespace
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {} # Allows all ingress traffic
  egress:
  - {} #
